python/testData/highlighting/returnOutsideOfFunction.py
def foo():
    class C:
        <error descr="'return' outside of function">return 1</error>